chore(doc): add tencent cloudbase clients

--- a/docs/clients.mdx
+++ b/docs/clients.mdx
@@ -25,6 +25,7 @@ This page provides an overview of applications that support the Model Context Pr
 | [LibreChat][LibreChat]                      | ❌          | ❌        | ✅      | ❌         | ❌    | Supports tools for Agents                                                   |
 | [mcp-agent][mcp-agent]                      | ❌          | ❌        | ✅      | ⚠️         | ❌    | Supports tools, server connection management, and agent workflows.          |
 | [Microsoft Copilot Studio]         | ❌          | ❌        | ✅      | ❌         | ❌    | Supports tools                                                              |
+| [Tencent CloudBase AI DevKit]               | ❌          | ❌        | ✅      | ❌         | ❌    | Supports tools                                                              |
 | [oterm][oterm]                              | ❌          | ✅        | ✅      | ❌         | ❌    | Supports tools and prompts.                                                 |
 | [Roo Code][Roo Code]                        | ✅          | ❌        | ✅      | ❌         | ❌    | Supports tools and resources.                                               |
 | [Sourcegraph Cody][Cody]                    | ✅          | ❌        | ❌      | ❌         | ❌    | Supports resources through OpenCTX                                          |
@@ -72,6 +73,7 @@ This page provides an overview of applications that support the Model Context Pr
 [Tools]: https://modelcontextprotocol.io/docs/concepts/tools
 [Sampling]: https://modelcontextprotocol.io/docs/concepts/sampling
 [Microsoft Copilot Studio]: https://learn.microsoft.com/en-us/microsoft-copilot-studio/agent-extend-action-mcp
+[Tencent CloudBase AI DevKit]: https://docs.cloudbase.net/ai/agent/mcp
 
 ## Client details
 
@@ -203,6 +205,14 @@ Programmatically assemble prompts for LLMs using [GenAIScript](https://microsoft
 - Support for MCP tools
 - Extend Copilot Studio agents with MCP servers
 - Leveraging Microsoft unified, governed, and secure API management solutions 
+
+### Tencent CloudBase AI DevKit
+[Tencent CloudBase AI DevKit] is a tool for building AI agents in minutes, featuring zero-code tools, secure data integration, and extensible plugins via MCP.
+
+**Key features:**
+- Support for MCP tools
+- Extend agents with MCP servers 
+- MCP servers hosting: serverless hosting and authentication support
 
 ### oterm
 [oterm] is a terminal client for Ollama allowing users to create chats/agents.
