--- a/docs/development/updates.mdx
+++ b/docs/development/updates.mdx
@@ -1,65 +1,65 @@
 ---
-title: "What's New"
-description: 'The latest updates and improvements to MCP'
+title: "最新动态"
+description: "MCP 最新更新与改进"
 ---
 
-<Update label="2025-04-10" description="Java SDK 0.9.0 released">
-- Version [0.9.0](https://github.com/modelcontextprotocol/java-sdk/releases/tag/v0.9.0) of the MCP Java SDK has been released.
-- Refactored logging system to use exchange mechanism
-- Custom Context Paths
-- Server Instructions
-- CallToolResult Enhancement   
-</Update>
-<Update label="2025-03-26" description="Kotlin SDK 0.4.0 released">
-- Fix issues and cleanup API
-- Added binary compatibility tracking to avoid breaking changes
-- Drop jdk requirements to JDK8 
-- Added Claude Desktop integration with sample
-- The full changelog can be found here: https://github.com/modelcontextprotocol/kotlin-sdk/releases/tag/0.4.0
+<Update label="2025-04-10" description="Java SDK 0.9.0 发布">
+- MCP Java SDK [0.9.0](https://github.com/modelcontextprotocol/java-sdk/releases/tag/v0.9.0) 版本正式发布
+- 重构日志系统以采用 exchange 机制
+- 支持自定义上下文路径
+- 新增服务端指令功能
+- 增强 CallToolResult 功能  
 </Update>
 
-<Update label="2025-03-26" description="Java SDK 0.8.1 released">
-- Version [0.8.1](https://github.com/modelcontextprotocol/java-sdk/releases/tag/v0.8.1) of the MCP Java SDK has been released,
-    providing important bug fixes.
+<Update label="2025-03-26" description="Kotlin SDK 0.4.0 发布">
+- 问题修复与 API 清理
+- 新增二进制兼容性追踪以避免破坏性变更
+- 最低 JDK 要求降至 JDK8
+- 新增 Claude Desktop 集成示例
+
+- 完整更新日志请访问: https://github.com/modelcontextprotocol/kotlin-sdk/releases/tag/0.4.0
 </Update>
-<Update label="2025-03-24" description="C# SDK released">
- - We are exited to announce the availability of the MCP
-   [C# SDK](https://github.com/modelcontextprotocol/csharp-sdk/) developed by
-   [Peder Holdgaard Pedersen](http://github.com/PederHP) and Microsoft. This joins our growing
-   list of supported languages. The C# SDK is also available as
-   [NuGet package](https://www.nuget.org/packages/ModelContextProtocol)
- - Python SDK 1.5.0 was released with multiple fixes and improvements.
+
+<Update label="2025-03-26" description="Java SDK 0.8.1 发布">
+- MCP Java SDK [0.8.1](https://github.com/modelcontextprotocol/java-sdk/releases/tag/v0.8.1) 版本发布，
+  包含重要问题修复
 </Update>
-<Update label="2025-03-21" description="Java SDK 0.8.0 released">
-- Version [0.8.0](https://github.com/modelcontextprotocol/java-sdk/releases/tag/v0.8.0) of the MCP Java SDK has been released,
-    delivering important session management improvements and bug fixes.
+
+<Update label="2025-03-24" description="C# SDK 发布">
+- 我们很高兴地宣布由 [Peder Holdgaard Pedersen](http://github.com/PederHP) 和 Microsoft 联合开发的 MCP
+  [C# SDK](https://github.com/modelcontextprotocol/csharp-sdk/) 正式发布。该 SDK 现可通过
+  [NuGet 包](https://www.nuget.org/packages/ModelContextProtocol) 获取，进一步扩展了我们的多语言支持生态
+- Python SDK 1.5.0 同步发布，包含多项功能改进与问题修复
 </Update>
-<Update label="2025-03-10" description="Typescript SDK release">
- - Typescript SDK 1.7.0 was released with multiple fixes and improvements.
+
+<Update label="2025-03-21" description="Java SDK 0.8.0 发布">
+- MCP Java SDK [0.8.0](https://github.com/modelcontextprotocol/java-sdk/releases/tag/v0.8.0) 版本发布，
+  重点改进了会话管理功能并修复了若干问题
 </Update>
-<Update label="2025-02-14" description="Java SDK released">
-  - We're excited to announce that the Java SDK developed by Spring AI at VMware Tanzu is now
-    the official [Java SDK](https://github.com/modelcontextprotocol/java-sdk) for MCP.
-    This joins our existing Kotlin SDK in our growing list of supported languages.
-    The Spring AI team will maintain the SDK as an integral part of the Model Context Protocol
-    organization. We're thrilled to welcome them to the MCP community!
+
+<Update label="2025-03-10" description="TypeScript SDK 发布">
+- TypeScript SDK 1.7.0 版本发布，包含多项改进与问题修复
+</Update>
+
+<Update label="2025-02-14" description="Java SDK 发布">
+- VMware Tanzu 旗下 Spring AI 团队开发的 Java SDK 现已成为 MCP 官方 [Java SDK](https://github.com/modelcontextprotocol/java-sdk)，
+
+  与现有 Kotlin SDK 共同构建多语言支持体系。该 SDK 将作为 Model Context Protocol 组织的核心组件由 Spring AI 团队持续维护，
+  我们热烈欢迎他们加入 MCP 社区！
 </Update>
 
 <Update label="2025-01-27" description="Python SDK 1.2.1">
-  - Version [1.2.1](https://github.com/modelcontextprotocol/python-sdk/releases/tag/v1.2.1) of the MCP Python SDK has been released,
-    delivering important stability improvements and bug fixes.
-</Update>
-<Update label="2025-01-18" description="SDK and Server Improvements">
-  - Simplified, express-like API in the [TypeScript SDK](https://github.com/modelcontextprotocol/typescript-sdk)
-  - Added 8 new clients to the [clients page](https://modelcontextprotocol.io/clients)
+- MCP Python SDK [1.2.1](https://github.com/modelcontextprotocol/python-sdk/releases/tag/v1.2.1) 版本发布，
+  重点提升了系统稳定性并修复了若干问题
 </Update>
 
-<Update label="2025-01-03" description="SDK and Server Improvements">
-  - FastMCP API in the [Python SDK](https://github.com/modelcontextprotocol/python-sdk)
-  - Dockerized MCP servers in the [servers repo](https://github.com/modelcontextprotocol/servers)
+
+<Update label="2025-01-18" description="SDK 与服务端改进">
+- [TypeScript SDK](https://github.com/modelcontextprotocol/typescript-sdk) 新增类 Express 的简化 API
+- [客户端页面](https://modelcontextprotocol.io/clients) 新增 8 个客户端支持
+
 </Update>
 
-<Update label="2024-12-21" description="Kotlin SDK released">
-  - Jetbrains released a Kotlin SDK for MCP!
-  - For a sample MCP Kotlin server, check out [this repository](https://github.com/modelcontextprotocol/kotlin-sdk/tree/main/samples/kotlin-mcp-server)
+<Update label="2025-01-03" description="SDK 与服务端改进">
+- [Python SDK](https://github.com/modelcontextprotocol/python-sdk) 新增 FastMCP API
 </Update>
