--- a/docs/snippets/snippet-intro.mdx
+++ b/docs/snippets/snippet-intro.mdx
@@ -1,4 +1,2 @@
-One of the core principles of software development is DRY (Don't Repeat
-Yourself). This is a principle that apply to documentation as
-well. If you find yourself repeating the same content in multiple places, you
-should consider creating a custom snippet to keep your content in sync.
+  
+软件开发的核心原则之一是 DRY（Don't Repeat Yourself）。这一原则同样适用于文档编写。如果您发现相同内容在多个位置重复出现，建议通过创建自定义代码片段（custom snippet）来保持内容同步。  
