--- a/docs/development/roadmap.mdx
+++ b/docs/development/roadmap.mdx
@@ -1,54 +1,54 @@
 ---
-title: Roadmap
-description: Our plans for evolving Model Context Protocol
+标题：发展路线图  
+描述：Model Context Protocol 的演进计划  
 ---
 
-<Info>Last updated: **2025-03-27**</Info>
+<Info>最后更新：**2025年3月27日**</Info>
 
-The Model Context Protocol is rapidly evolving. This page outlines our current thinking on key priorities and direction for approximately **the next six months**, though these may change significantly as the project develops. To see what's changed recently, check out the **[specification changelog](/specification/2025-03-26/changelog/)**.
+Model Context Protocol 正在快速发展。本文档概述了我们当前对**未来六个月**内关键优先事项和方向的规划，但随着项目推进，这些内容可能会发生重大变化。要了解近期更新，请查阅**[规范变更日志](/specification/2025-03-26/changelog/)**。
 
-<Note>The ideas presented here are not commitments—we may solve these challenges differently than described, or some may not materialize at all. This is also not an _exhaustive_ list; we may incorporate work that isn't mentioned here.</Note>
+<Note>本文提出的构想并非最终承诺——我们可能采用与描述不同的解决方案，部分构想也可能不会实现。这也不是一份_完整_清单，我们可能会加入未提及的工作内容。</Note>
 
-We value community participation! Each section links to relevant discussions where you can learn more and contribute your thoughts.
+我们重视社区参与！每个章节都附有相关讨论链接，您可以通过这些链接了解更多信息并贡献想法。
 
-For a technical view of our standardization process, visit the [Standards Track](https://github.com/orgs/modelcontextprotocol/projects/2/views/2) on GitHub, which tracks how proposals progress toward inclusion in the official [MCP specification](https://spec.modelcontextprotocol.io).
+如需从技术视角了解我们的标准化流程，请访问 GitHub 上的[标准追踪看板](https://github.com/orgs/modelcontextprotocol/projects/2/views/2)，该看板记录了提案如何逐步纳入官方 [MCP 规范](https://spec.modelcontextprotocol.io)。
 
-## Validation
+## 验证体系
 
-To foster a robust developer ecosystem, we plan to invest in:
+为构建强大的开发者生态，我们计划重点投入以下方向：
 
-- **Reference Client Implementations**: demonstrating protocol features with high-quality AI applications
-- **Compliance Test Suites**: automated verification that clients, servers, and SDKs properly implement the specification
+- **参考客户端实现**：通过高质量 AI 应用展示协议特性  
+- **合规性测试套件**：自动化验证客户端、服务端及 SDK 是否准确实现了规范要求  
 
-These tools will help developers confidently implement MCP while ensuring consistent behavior across the ecosystem.
+这些工具将帮助开发者自信地实现 MCP，同时确保整个生态系统的行为一致性。
 
-## Registry
+## 注册中心
 
-For MCP to reach its full potential, we need streamlined ways to distribute and discover MCP servers.
+为使 MCP 充分发挥潜力，我们需要更高效的服务器分发与发现机制。
 
-We plan to develop an [**MCP Registry**](https://github.com/orgs/modelcontextprotocol/discussions/159) that will enable centralized server discovery and metadata. This registry will primarily function as an API layer that third-party marketplaces and discovery services can build upon.
+我们计划开发 [**MCP 注册中心**](https://github.com/orgs/modelcontextprotocol/discussions/159)，实现集中化的服务器发现与元数据管理。该注册中心将主要作为 API 层，供第三方市场与发现服务在此基础上构建。
 
-## Agents
+## 智能体
 
-As MCP increasingly becomes part of agentic workflows, we're exploring [improvements](https://github.com/modelcontextprotocol/specification/discussions/111) such as:
+随着 MCP 日益融入智能体工作流，我们正在探索以下[改进方案](https://github.com/modelcontextprotocol/specification/discussions/111)：
 
-- **[Agent Graphs](https://github.com/modelcontextprotocol/specification/discussions/94)**: enabling complex agent topologies through namespacing and graph-aware communication patterns
-- **Interactive Workflows**: improving human-in-the-loop experiences with granular permissioning, standardized interaction patterns, and [ways to directly communicate](https://github.com/modelcontextprotocol/specification/issues/97) with the end user
+- **[智能体图谱](https://github.com/modelcontextprotocol/specification/discussions/94)**：通过命名空间和图感知通信模式实现复杂智能体拓扑结构  
+- **交互式工作流**：通过细粒度权限控制、标准化交互模式以及[与终端用户直接通信](https://github.com/modelcontextprotocol/specification/issues/97)的机制，优化人机协同体验  
 
-## Multimodality
+## 多模态支持
 
-Supporting the full spectrum of AI capabilities in MCP, including:
+在 MCP 中全面支持 AI 能力，包括：
 
-- **Additional Modalities**: video and other media types
-- **[Streaming](https://github.com/modelcontextprotocol/specification/issues/117)**: multipart, chunked messages, and bidirectional communication for interactive experiences
+- **扩展模态**：视频及其他媒体类型  
+- **[流式传输](https://github.com/modelcontextprotocol/specification/issues/117)**：支持多部分消息、分块传输及双向通信，实现交互式体验  
 
-## Governance
+## 治理机制
 
-We're implementing governance structures that prioritize:
+我们正在建立以下优先的治理架构：
 
-- **Community-Led Development**: fostering a collaborative ecosystem where community members and AI developers can all participate in MCP's evolution, ensuring it serves diverse applications and use cases
-- **Transparent Standardization**: establishing clear processes for contributing to the specification, while exploring formal standardization via industry bodies
+- **社区主导开发**：培育协作生态，让社区成员和 AI 开发者都能参与 MCP 演进，确保其满足多样化应用场景需求  
+- **透明标准化流程**：建立清晰的规范贡献机制，同时探索通过行业组织实现正式标准化  
 
-## Get Involved
+## 参与贡献
 
-We welcome your contributions to MCP's future! Join our [GitHub Discussions](https://github.com/orgs/modelcontextprotocol/discussions) to share ideas, provide feedback, or participate in the development process.
+欢迎您共同塑造 MCP 的未来！加入我们的 [GitHub 讨论区](https://github.com/orgs/modelcontextprotocol/discussions)分享创意、提供反馈或参与开发流程。
