--- a/docs/docs/concepts/sampling.mdx
+++ b/docs/docs/concepts/sampling.mdx
@@ -1,29 +1,29 @@
 ---
-title: "Sampling"
-description: "Let your servers request completions from LLMs"
+标题: "采样功能"  
+描述: "让您的服务器能够通过大模型获取补全结果"  
 ---
 
-Sampling is a powerful MCP feature that allows servers to request LLM completions through the client, enabling sophisticated agentic behaviors while maintaining security and privacy.
+采样是MCP的一项强大功能，它允许服务器通过客户端请求大模型补全，在保障安全与隐私的同时实现复杂的智能体行为。
 
 <Info>
   This feature of MCP is not yet supported in the Claude Desktop client.
 </Info>
 
-## How sampling works
+## 工作原理
 
-The sampling flow follows these steps:
+采样流程遵循以下步骤：
 
-1. Server sends a `sampling/createMessage` request to the client
-2. Client reviews the request and can modify it
-3. Client samples from an LLM
-4. Client reviews the completion
-5. Client returns the result to the server
+1. 服务器向客户端发送`sampling/createMessage`请求  
+2. 客户端审核并可能修改该请求  
+3. 客户端从大模型获取采样结果  
+4. 客户端审核补全内容  
+5. 客户端将结果返回服务器  
 
-This human-in-the-loop design ensures users maintain control over what the LLM sees and generates.
+这种"人在回路"设计确保用户始终控制大模型的输入与输出。
 
-## Message format
+## 消息格式
 
-Sampling requests use a standardized message format:
+采样请求采用标准化消息格式：
 
 ```typescript
 {
@@ -59,59 +59,59 @@ Sampling requests use a standardized message format:
 }
 ```
 
-## Request parameters
+## 请求参数
 
-### Messages
+### 消息内容
 
-The `messages` array contains the conversation history to send to the LLM. Each message has:
+`messages`数组包含发送给大模型的对话历史。每条消息包含：
 
-- `role`: Either "user" or "assistant"
-- `content`: The message content, which can be:
-  - Text content with a `text` field
-  - Image content with `data` (base64) and `mimeType` fields
+- `role`：取值为"user"或"assistant"  
+- `content`：消息内容，可以是：  
+  - 文本内容（含`text`字段）  
+  - 图像内容（含`data` base64编码字段和`mimeType`字段）  
 
-### Model preferences
+### 模型偏好
 
-The `modelPreferences` object allows servers to specify their model selection preferences:
+`modelPreferences`对象允许服务器指定模型选择偏好：
 
-- `hints`: Array of model name suggestions that clients can use to select an appropriate model:
-  - `name`: String that can match full or partial model names (e.g. "claude-3", "sonnet")
-  - Clients may map hints to equivalent models from different providers
-  - Multiple hints are evaluated in preference order
+- `hints`：模型名称建议数组，客户端可据此选择合适模型：  
+  - `name`：可匹配完整或部分模型名称的字符串（如"claude-3"，"sonnet"）  
+  - 客户端可将提示映射到不同提供商的等效模型  
+  - 多个提示按优先顺序评估  
 
-- Priority values (0-1 normalized):
-  - `costPriority`: Importance of minimizing costs
-  - `speedPriority`: Importance of low latency response
-  - `intelligencePriority`: Importance of advanced model capabilities
+- 优先级参数（0-1标准化值）：  
+  - `costPriority`：成本最小化的重要性  
+  - `speedPriority`：低延迟响应的重要性  
+  - `intelligencePriority`：高级模型能力的重要性  
 
-Clients make the final model selection based on these preferences and their available models.
+客户端根据这些偏好和可用模型做出最终选择。
 
-### System prompt
+### 系统提示词
 
-An optional `systemPrompt` field allows servers to request a specific system prompt. The client may modify or ignore this.
+可选`systemPrompt`字段允许服务器请求特定系统提示词，客户端可修改或忽略该请求。
 
-### Context inclusion
+### 上下文包含
 
-The `includeContext` parameter specifies what MCP context to include:
+`includeContext`参数指定要包含的MCP上下文范围：
 
-- `"none"`: No additional context
-- `"thisServer"`: Include context from the requesting server
-- `"allServers"`: Include context from all connected MCP servers
+- `"none"`：不包含额外上下文  
+- `"thisServer"`：包含请求服务器的上下文  
+- `"allServers"`：包含所有连接MCP服务器的上下文  
 
-The client controls what context is actually included.
+实际包含内容由客户端控制。
 
-### Sampling parameters
+### 采样参数
 
-Fine-tune the LLM sampling with:
+可通过以下参数微调大模型采样：
 
-- `temperature`: Controls randomness (0.0 to 1.0)
-- `maxTokens`: Maximum tokens to generate
-- `stopSequences`: Array of sequences that stop generation
-- `metadata`: Additional provider-specific parameters
+- `temperature`：控制随机性（0.0至1.0）  
+- `maxTokens`：生成的最大token数  
+- `stopSequences`：终止生成的序列数组  
+- `metadata`：供应商特定附加参数  
 
-## Response format
+## 响应格式
 
-The client returns a completion result:
+客户端返回补全结果：
 
 ```typescript
 {
@@ -127,9 +127,9 @@ The client returns a completion result:
 }
 ```
 
-## Example request
+## 请求示例
 
-Here's an example of requesting sampling from a client:
+以下是向客户端请求采样的示例：
 ```json
 {
   "method": "sampling/createMessage",
@@ -150,96 +150,96 @@ Here's an example of requesting sampling from a client:
 }
 ```
 
-## Best practices
+## 最佳实践
 
-When implementing sampling:
+实施采样时建议：
 
-1. Always provide clear, well-structured prompts
-2. Handle both text and image content appropriately
-3. Set reasonable token limits
-4. Include relevant context through `includeContext`
-5. Validate responses before using them
-6. Handle errors gracefully
-7. Consider rate limiting sampling requests
-8. Document expected sampling behavior
-9. Test with various model parameters
-10. Monitor sampling costs
+1. 始终提供清晰、结构化的提示词  
+2. 正确处理文本和图像内容  
+3. 设置合理的token限制  
+4. 通过`includeContext`包含相关上下文  
+5. 使用前验证响应内容  
+6. 优雅处理错误  
+7. 考虑实施速率限制  
+8. 记录预期的采样行为  
+9. 测试不同模型参数  
+10. 监控采样成本  
 
-## Human in the loop controls
+## 人工控制机制
 
-Sampling is designed with human oversight in mind:
+采样功能设计强调人工监督：
 
-### For prompts
+### 提示词控制
 
-- Clients should show users the proposed prompt
-- Users should be able to modify or reject prompts
-- System prompts can be filtered or modified
-- Context inclusion is controlled by the client
+- 客户端应向用户展示拟发送的提示词  
+- 用户应能修改或拒绝提示词  
+- 系统提示词可被过滤或修改  
+- 上下文包含由客户端控制  
 
-### For completions
+### 补全控制
 
-- Clients should show users the completion
-- Users should be able to modify or reject completions
-- Clients can filter or modify completions
-- Users control which model is used
+- 客户端应向用户展示补全结果  
+- 用户应能修改或拒绝补全内容  
+- 客户端可过滤或修改补全结果  
+- 用户控制所用模型选择  
 
-## Security considerations
+## 安全考量
 
-When implementing sampling:
+实施采样时需注意：
 
-- Validate all message content
-- Sanitize sensitive information
-- Implement appropriate rate limits
-- Monitor sampling usage
-- Encrypt data in transit
-- Handle user data privacy
-- Audit sampling requests
-- Control cost exposure
-- Implement timeouts
-- Handle model errors gracefully
+- 验证所有消息内容  
+- 脱敏敏感信息  
+- 实施适当的速率限制  
+- 监控采样使用情况  
+- 传输数据加密  
+- 处理用户数据隐私  
+- 审计采样请求  
+- 控制成本风险  
+- 设置超时机制  
+- 优雅处理模型错误  
 
-## Common patterns
+## 常见模式
 
-### Agentic workflows
+### 智能体工作流
 
-Sampling enables agentic patterns like:
+采样支持以下智能体模式：
 
-- Reading and analyzing resources
-- Making decisions based on context
-- Generating structured data
-- Handling multi-step tasks
-- Providing interactive assistance
+- 读取分析资源  
+- 基于上下文决策  
+- 生成结构化数据  
+- 处理多步骤任务  
+- 提供交互式协助  
 
-### Context management
+### 上下文管理
 
-Best practices for context:
+上下文最佳实践：
 
-- Request minimal necessary context
-- Structure context clearly
-- Handle context size limits
-- Update context as needed
-- Clean up stale context
+- 仅请求必要最小上下文  
+- 清晰组织上下文结构  
+- 处理上下文大小限制  
+- 按需更新上下文  
+- 清理过期上下文  
 
-### Error handling
+### 错误处理
 
-Robust error handling should:
+健壮的错误处理应：
 
-- Catch sampling failures
-- Handle timeout errors
-- Manage rate limits
-- Validate responses
-- Provide fallback behaviors
-- Log errors appropriately
+- 捕获采样失败  
+- 处理超时错误  
+- 管理速率限制  
+- 验证响应内容  
+- 提供回退机制  
+- 规范错误日志  
 
-## Limitations
+## 限制条件
 
-Be aware of these limitations:
+需注意以下限制：
 
-- Sampling depends on client capabilities
-- Users control sampling behavior
-- Context size has limits
-- Rate limits may apply
-- Costs should be considered
-- Model availability varies
-- Response times vary
-- Not all content types supported
+- 采样依赖客户端能力  
+- 用户控制采样行为  
+- 上下文存在大小限制  
+- 可能适用速率限制  
+- 需考虑成本因素  
+- 模型可用性各异  
+- 响应时间波动  
+- 非所有内容类型都被支持
