--- a/docs/docs/concepts/architecture.mdx
+++ b/docs/docs/concepts/architecture.mdx
@@ -35,7 +35,17 @@ flowchart LR
 ### 协议层
 
 协议层负责消息帧处理、请求/响应关联及高层通信模式管理。
+<Tabs>
+  <Tab title="TypeScript">
+    ```typescript
+    class Protocol<Request, Notification, Result> {
+        // Handle incoming requests
+        setRequestHandler<T>(schema: T, handler: (request: T, extra: RequestHandlerExtra) => Promise<Result>): void
 
+        // Handle incoming notifications
+        setNotificationHandler<T>(schema: T, handler: (notification: T) => Promise<void>): void
+
+        // Send requests and await responses
         request<T>(request: Request, schema: T, options?: RequestOptions): Promise<T>
 
         // Send one-way notifications
@@ -256,7 +266,6 @@ SDK和应用程序可自定义-32000以上的错误码。
         asyncio.run(main())
     ```
   </Tab>
-</Tabs>
 
 ## 最佳实践
 
