--- a/docs/development/roadmap.mdx
+++ b/docs/development/roadmap.mdx
@@ -1,6 +1,6 @@
 ---
-标题：发展路线图  
-描述：Model Context Protocol 的演进计划  
+title: 发展路线图  
+description: Model Context Protocol 的演进计划  
 ---
 
 <Info>最后更新：**2025年3月27日**</Info>
