--- a/docs/docs/concepts/architecture.mdx
+++ b/docs/docs/concepts/architecture.mdx
@@ -1,6 +1,6 @@
 ---
-标题："核心架构"
-描述："了解MCP如何连接客户端、服务器与大模型"
+title: "核心架构"
+description: "了解MCP如何连接客户端、服务器与大模型"
 ---
 
 模型上下文协议（MCP）基于灵活可扩展的架构构建，实现大模型应用与集成间的无缝通信。本文档阐述核心架构组件与设计理念。
