--- a/docs/docs/concepts/prompts.mdx
+++ b/docs/docs/concepts/prompts.mdx
@@ -1,6 +1,6 @@
 ---
-标题："提示词"
-描述："创建可复用的提示词模板与工作流"
+title: "提示词"
+description: "创建可复用的提示词模板与工作流"
 ---
 
 提示词功能允许服务端定义可复用的提示词模板和工作流，客户端可轻松将其呈现给用户和大模型。这为标准化和共享常见的大模型交互提供了强大途径。
