--- a/docs/examples.mdx
+++ b/docs/examples.mdx
@@ -1,6 +1,6 @@
 ---
-标题：示例服务器清单  
-描述：'展示各类示例服务器及实现方案'  
+title: 示例服务器清单  
+description: '展示各类示例服务器及实现方案'  
 ---
 
 本页面展示了多种Model Context Protocol (MCP)服务器，这些案例充分体现了该协议的强大功能和灵活适用性。通过这类服务器，大模型能够安全地访问各类工具和数据源。
